Cambios en el diseño del formulario

--- a/Proyects/Survey_Form/css/styles.css
+++ b/Proyects/Survey_Form/css/styles.css
@@ -33,22 +33,34 @@
   flex-direction: column;
   justify-content: center;
   margin: 2rem auto;
-  padding: 4rem;
+  padding: 3%;
 }
 
+.form-header {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
 #title {
-  font-size: 3.2rem;
+  font-size: 4rem;
   font-weight: bold;
+  padding: 0.5rem;
+  color: #000000cc;
+  text-align: center;
 }
 
 #description {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  padding: 0.5rem;
+  color: #000000cc;
+  text-align: center;
 }
 
 .survey-form-field {
   display: grid;
-  padding: 0.5rem 0;
-  gap: 0.4rem;
+  gap: 0.5rem;
+  padding: 0.5rem;
 }
 
 .survey-form-field input,
@@ -63,6 +75,12 @@ select {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   font-size: 1.2rem;
+  padding: 0.5rem;
+}
+
+.textarea textarea {
+  height: 10rem;
+  resize: none;
 }
 
 .survey-form-field input::placeholder,
@@ -71,18 +89,36 @@ select::placeholder {
   font-size: 1rem;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.survey-form-field input:focus,
+textarea:focus,
+select:focus,select:focus {
+  background-color: #fff;
+
+}
+
 .survey-form-field label {
   font-weight: bold;
   font-size: 1.5rem;
+  padding: 0 0.5rem;
 }
 
 .submit-btn {
   font-weight: bold;
-  padding: .5rem;
-  background: rgba( 255, 255, 255, 0.20 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 0.0px );
--webkit-backdrop-filter: blur( 0.0px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  padding: 0.3rem;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.submit-btn:hover {
+  background: #5555d8;
 }
