Correción de selector repetido

--- a/Proyects/Survey_Form/css/styles.css
+++ b/Proyects/Survey_Form/css/styles.css
@@ -28,7 +28,7 @@
   backdrop-filter: blur(14px);
   -webkit-backdrop-filter: blur(14px);
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18); /*  */
+  border: 1px solid rgba(255, 255, 255, 0.18);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -97,7 +97,6 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .survey-form-field input:focus,
 textarea:focus,
-select:focus,
 select:focus {
   background-color: #fff;
 }
