Agregados los albumes de Cerati como solista

--- a/Proyects/Build_a_Tribute_Page/css/styles.css
+++ b/Proyects/Build_a_Tribute_Page/css/styles.css
@@ -288,6 +288,24 @@ html {
 #giraMeVerasVolver2_2008 {
   background: #A14975;
 }
+#amorAmarillo1993 {
+  background: #ffe62c;
+}
+#bocanada1999 {
+  background: #1F589D;
+}
+#episodiosSinfonicos2001{
+  background: #983530;
+}
+#siempreEsHoy2002 {
+  background: #ADBDD1;
+}
+#ahiVamos2006 {
+  background: #14171B;
+}
+#fuerzaNatural2009 {
+  background: #1B2421;
+}
 /* ========================================== */
 /* Footer */
 .footer {
