Responsive design adjustments

--- a/Proyects/Technical_Documentation_Page/css/styles.css
+++ b/Proyects/Technical_Documentation_Page/css/styles.css
@@ -253,6 +253,8 @@
     transition: all .2s;
     padding: 0;
     z-index: 300;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .nav-menu ul {
@@ -285,11 +287,12 @@
   }
 
   #check:checked ~ .nav-menu {
-    height: auto;
+    height: 80vh;
     padding: 1rem 0;
     width: 80%;
     top: 15vh;
     left: 0;
+    position: absolute;
   }
 
   #check:checked ~ .nav-menu li {
