Revert "Responsive design adjustments"
This reverts commit bcdd4d1c64c0194f09dcbd91c418e9047c5d1bdd.

--- a/Proyects/Technical_Documentation_Page/css/styles.css
+++ b/Proyects/Technical_Documentation_Page/css/styles.css
@@ -253,8 +253,6 @@
     transition: all .2s;
     padding: 0;
     z-index: 300;
-    overflow-y: scroll;
-    overflow-x: hidden;
   }
 
   .nav-menu ul {
@@ -287,12 +285,11 @@
   }
 
   #check:checked ~ .nav-menu {
-    height: 80vh;
+    height: auto;
     padding: 1rem 0;
     width: 80%;
     top: 15vh;
     left: 0;
-    position: absolute;
   }
 
   #check:checked ~ .nav-menu li {
