--- a/Proyects/Technical_Documentation_Page/css/styles.css
+++ b/Proyects/Technical_Documentation_Page/css/styles.css
@@ -23,7 +23,8 @@
     "aside main main main"
     "aside main main main"
     "footer footer footer footer";
-}
+  overflow-x: hidden;
+  }
 
 /* Header */
 .header {
@@ -116,7 +117,6 @@
   margin: 1rem 0 0 18vw;
   padding: 2rem;
   background: #fff;
-  height: 100%;
 }
 
 .main section {
@@ -197,9 +197,15 @@
 @media screen and (max-width: 848px) {
   /* General Layout changes */
   .main {
-    margin: 0;
+    margin: 15vh 0 0 0;
     grid-column: 1 / -1;
+    overflow: hidden;
   }
+
+  .main section img {
+    width: calc(16rem + 6vw);
+  }
+
   .header {
     display: none;
   }
@@ -304,4 +310,21 @@
     box-shadow: rgba(0, 0, 0, 0.383) 0.1rem 0.2rem 1rem;
   }
 
+}
+
+@media screen and (max-width: 444px) {
+  .mobileMenu header {
+    font-size: calc(.7rem + 1vw);
+    text-align: center;
+  }
+
+  .headerImg {
+    height: 2.5rem;
+    padding: 0 1.5rem;
+  }
+
+  #check:checked ~ .nav-menu li {
+    margin: 0 .5rem;
+  }
+  
 }
