Last section - Documentation Page

--- a/Proyects/Technical_Documentation_Page/css/styles.css
+++ b/Proyects/Technical_Documentation_Page/css/styles.css
@@ -234,6 +234,11 @@
   text-align: center;
 }
 
+.footer a,
+.footer a:visited {
+  color: #fff;
+}
+
 /* ============================================== */
 /* MEDIA QUERIES */
 
